# hyperliquid-rust-sdk

./: .gitignore  Cargo.toml  ci.sh  devenv.nix
.github/workflows/: master.yml
src/: helpers.rs  lib.rs  meta.rs
src/exchange/: exchange_client.rs
src/info/: info_client.rs
src/ws/: sub_structs.rs  ws_manager.rs
