[package]
name = "hyperliquid_rust_sdk"
version = "0.6.3"
edition = "2021"
license = "MIT"
description = "Rust SDK for Hyperliquid"
homepage = "https://hyperliquid.xyz/"
readme = "README.md"
documentation = "https://github.com/hyperliquid-dex/hyperliquid-rust-sdk"
repository = "https://github.com/hyperliquid-dex/hyperliquid-rust-sdk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }

chrono = "0.4.41"
env_logger = "0.11.8"
ethers = { version = "2.0.14", features = ["eip712", "abigen"] }
futures-util = "0.3.31"
hex = "0.4.3"
http = "1.3.1"
lazy_static = "1.5.0"
log = "0.4.27"
rand = "0.9.1"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rmp-serde = "1.3.0"
thiserror = "2.0.12"
uuid = { version = "1.17.0", features = ["v4"] }
sonic-rs = "0.5.1"