[package]
name = "hyperliquid_rust_sdk"
version = "0.6.0"
edition = "2021"
license = "MIT"
description = "Rust SDK for Hyperliquid"
homepage = "https://hyperliquid.xyz/"
readme = "README.md"
documentation = "https://github.com/hyperliquid-dex/hyperliquid-rust-sdk"
repository = "https://github.com/hyperliquid-dex/hyperliquid-rust-sdk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy = { version = "1.0.33", default-features = false, features = [
  "dyn-abi",
  "sol-types",
  "signer-local",
] }
chrono = "0.4.42"
env_logger = "0.11.8"
futures-util = "0.3.31"
lazy_static = "1.5.0"
log = "0.4.28"
reqwest = "0.12.23"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
rmp-serde = "1.3.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls-vendored"] }
uuid = { version = "1.18.1", features = ["v4"] }
